konst/tests/misc_tests/iter_eval_ui_tests/non_iter_err.rs
const _: () = {
    konst::iter::eval!((), map(|_| 10),fold(0, |l, r| l + r));
};

fn main(){}